# aiocxc

./: .gitignore  Cargo.toml  pyproject.toml
examples/: orderbook.py
src/: errors.rs  lib.rs  utils.rs
src/binance/: api.rs  mod.rs  models.rs
