[package]
name = "aiocxc"
version = "0.1.0"
edition = "2018"

[lib]
name = "aiocxc"
crate-type = ["cdylib"]

[dependencies]
# PyO3 dependencies.
pyo3 = { version = "0.16", features = ["anyhow", "extension-module", "serde"] }
pyo3-asyncio = { version = "0.16", features = ["attributes", "tokio-runtime"] }
pyo3-chrono = { version = "0.4", features = ["serde"] }
# Project dependencies.
anyhow = "1"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.17", features = ["full"] }
