[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "aiocxc"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

# For `poetry run`.
[tool.poetry]
name = "aiocxc"
version = "0.1.0"
description = "Asyncio cryptocurrency exchange library"
authors = ["dikuchan <dikuchan@protonmail.com>"]